--- a/themes/alternis/assets/css/gutenberg.scss
+++ b/themes/alternis/assets/css/gutenberg.scss
@@ -125,6 +125,8 @@
 
   // old post style
   .wp-block-ugb-image-box {
+    margin-bottom: 20px;
+
     .ugb-block-content {
       display: flex;
       justify-content: space-between;
